# Python_Assignment

./: README.md  requirements.txt  setup.cfg
Devalore_Assignment1/: Clients.py
examples/: Driver.py
src/Devalore_Assignment1/: Clients.py  WeatherApi.py  WeatherWebApp.py
