[metadata]
name = MatanMatitya-Devalore-Test
version = version number: 1.0.0
license = license name, e.g. MIT
description = Solution for Devalore Python assignment
long_description = file: README.rst
author = Matan Matitya
author_email = MatanMatitya@gmail.com
classifiers=
[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   json
   Flask
   pyowm
   logging
   requests
   threading

[options.packages.find]
where=src